--- a/media.html
+++ b/media.html
@@ -1,7 +1,6 @@
-<!doctype html>
-<html>
+<!doctype>
 <head>
-  <title>WEB1 - HTML</title>
+  <title>Media</title>
   <meta charset="utf-8">
 </head>
 <body>
@@ -13,26 +12,18 @@
     <li><a href="media.html">Media</li>
   </ol>
 
-  <h2>HTML이란 무엇인가?</h2>
+  <h2>동영상 삽입</h2>
+
   <p>
-  <a href="https://www.w3.org/TR/html52/" target="_blank"
-  title="html5 specification">
-  Hypertext Markup Language (HTML)</a> is the standard markup
-  language for <strong>creating <u>web</u> pages</strong> and web applications.
-  Web browsers receive HTML documents from a web server or from local
-  storage and render them into multimedia web pages.
-  HTML describes the structure of a web page semantically and originally
-  included cues for the appearance of the document.
-  <img src="coding_img.jpg" width = "100%">
-  </p>
-  <p style="margin-top:40px">
-  HTML elements are the building blocks of HTML pages.
-  With HTML constructs, images and other objects, such as interactive forms,
-  may be embedded into the rendered page.
-  It provides a means to create structured documents by denoting structural
-  semantics for text such as headings, paragraphs, lists, links,
-  quotes and other items. HTML elements are delineated by tags,
-  written using angle brackets.
+    <iframe
+    width="560" height="315"
+    src="https://www.youtube.com/embed/7T7r_oSp0SE"
+    title="YouTube video player"
+    frameborder="0"
+    allow="accelerometer; autoplay; clipboard-write;
+          encrypted-media; gyroscope; picture-in-picture"
+    allowfullscreen>
+    </iframe>
   </p>
 
   <div id="disqus_thread"></div>
@@ -56,4 +47,3 @@
   <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
 
 </body>
-</html>
