--- a/index.html
+++ b/index.html
@@ -3,6 +3,16 @@
 <head>
   <title>WEB1 - Welcome</title>
   <meta charset="utf-8">
+
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-0H409T1PZ0"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-0H409T1PZ0');
+</script>
 </head>
 <body>
   <h1><a href="index.html">WEB</a></h1>
